Correct column spacing

--- a/src/assets/scss/components/_rows.scss
+++ b/src/assets/scss/components/_rows.scss
@@ -7,7 +7,7 @@
 
 // Grid framework - from bootstrap
 
-%grid-column {
+%vgrid-column {
   position: relative;
   width: 100%;
   padding-left: $vgrid-gutter / 2;
